# libnice

./: .dockerignore  Makefile.am  build_libnice.Dockerfile  build_libnice_in_docker.sh  configure.ac  run_docker_xenial_xerus.sh
agent/: Makefile.am  agent-enumtypes.h  agent.c  agent.h  component.c  component.h
nice/: Makefile.am  libnice.sym
python/: Makefile.am  pylibnice.defs  pylibnice.override  pylibnicemodule.c
